--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tatuapé Conceito Oficial</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -138,8 +138,8 @@
                         <input placeholder="E-mail:" type="text" id="email" autocomplete="on">
                     </div>
                     <div class="checkbox_container">
-                            <input class="input_checkbox" type="checkbox" id="newsletter">
-                            <label for="newsletter">Aceito receber promoções por e-mail</label>
+                        <input class="input_checkbox" type="checkbox" id="newsletter">
+                        <label for="newsletter">Aceito receber promoções por e-mail</label>
                     </div>
                     <div class="button_container">
                         <button>ASSINAR</button>
@@ -153,8 +153,8 @@
                     <h3>Fale Conosco</h3>
                     <ul>
                         <li>
-                            <a href="https://wa.me/5511934478717?text=Ol%C3%A1%2C+visitei+o+site+da+Tatuap%C3%A9+Conceito+e+gostaria+de+algumas+informa%C3%A7%C3%B5es.+Pode+me+ajudar%3F" 
-                            target="_blank">
+                            <a href="https://wa.me/5511934478717?text=Ol%C3%A1%2C+visitei+o+site+da+Tatuap%C3%A9+Conceito+e+gostaria+de+algumas+informa%C3%A7%C3%B5es.+Pode+me+ajudar%3F"
+                                target="_blank">
                                 <span>WhatsApp <br> (11) 93447-8717</span>
                             </a>
                         </li>
@@ -220,7 +220,7 @@
                         </li>
                         <li>
                             <a href="">
-                                <span>Horário de atendimento do ecommerce: <br> Segunda a Sexta das 10h às 19h</span>
+                                <span>Horário de funcionamento - Loja física <br> Segunda a Sábado das 10h às 20h</span>
                             </a>
                         </li>
                     </ul>
@@ -228,22 +228,22 @@
                 <div class="col_footer_pay-sec">
                     <div class="footer_payments">
                         <ol>
-                            <li>visa</li>
-                            <li>master</li>
-                            <li>amex</li>
-                            <li>hipercard</li>
-                            <li>elo</li>
-                            <li>pix</li>
+                            <li class="visa"></li>
+                            <li class="master"></li>
+                            <li class="amex"></li>
+                            <li class="hipercard"></li>
+                            <li class="elo"></li>
+                            <li class="pix"></li>
                         </ol>
                     </div>
                     <div class="footer_security">
                         <span>SITE SEGURO</span>
                         <ol>
                             <li>
-                                <img src="" alt="Google Safe">
+                                <img src="./icons/google-security.png" alt="Google Safe">
                             </li>
                             <li>
-                                <img src="" alt="Logo clearsale">
+                                <img src="./icons/clearsale.b5bd0e2.png" alt="Logo clearsale">
                             </li>
                         </ol>
                     </div>
@@ -251,12 +251,16 @@
                         <nav>
                             <ul>
                                 <li>
-                                    <a href="">Facebook</a>
+                                    <a href="">
+                                        <img class="fc-icon" src="./icons/facebook.png" alt="Logo Facebook">
+                                    </a>
                                 </li>
                             </ul>
                             <ul>
                                 <li>
-                                    <a href="">Instagram</a>
+                                    <a href="">
+                                        <img class="inst-icon" src="./icons/instagram.png" alt="Logo Instagram">
+                                    </a>
                                 </li>
                             </ul>
                         </nav>
@@ -264,7 +268,12 @@
                 </div>
             </div>
         </div>
-        <div class="copy"> &copy; 2023 - TATUAPÉ CONCEITO DE ROUPAS E ACESSÓRIOS LTDA CNPJ: 17.521.536/0001-55</div>
+        <div class="copy_wrapper">
+            <div class="copy">
+                <p>&copy; 2023 - <b>TATUAPÉ CONCEITO</b> COMÉRCIO DE ROUPAS E ACESSÓRIOS LTDA CNPJ: 17.521.536/0001-55</p>  
+                <img class="logo_convertr" src="./icons/logoconvertr.svg" alt="Logo convertr">
+            </div>
+        </div>
     </footer>
 </body>
 
