--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         rel="stylesheet">
 
 </head>
-
 <body>
     <header class="header">
         <div class="header_wrapper">
@@ -203,7 +202,8 @@
         </section>
         <section class="slider">
             <h2>Recomendados para você</h2>
-
+            <br>
+            <br>
             <button class="slider_arrow left_arrow">&lt;</button>
             <button class="slider_arrow right_arrow">&gt;</button>
             
@@ -964,8 +964,276 @@
                 </div>
             </div>
         </section>
-        <section class="acessorios_slider"></section>
-        <section class="reviews"></section>
+        <section class="slider acessorios">
+            <div class="container">
+                <h2>
+                    Acessórios<br> para completar<br> o look
+                </h2>
+            </div>
+            <div class="slider_wrapper acessorios_wrapper">
+                <button class="slider_arrow left_arrow">&lt;</button>
+                <button class="slider_arrow right_arrow">&gt;</button>
+                <div class="product_container">
+                    <div class="product">
+                        <img src="./icons/perfume-template.png" alt="Produto" class="product_image">
+                        <div class="product_overlay">
+                            <div class="product_info">
+                                <div class="size_options">
+                                    <span>PP</span>
+                                    <span>P</span>
+                                    <span>M</span>
+                                    <span>G</span>
+                                    <span>GG</span>
+                                </div>
+                                <button class="buy_button">COMPRE AGORA</button>
+                            </div>
+                        </div>
+                        <div class="product_heart">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                                <path class="heart_path"
+                                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product_description">
+                        <p class="product_name">Jaqueta Lacoste</p>
+                        <span><b>R$ 236,15</b> <s>R$ 336,00</s> <small>3x R$ 99,90</small> <br> <b class="green">R$ 229,90</b> no PIX</b> </span>
+                        <br>
+                        <br>
+                        <p>+ 19 cores</p>
+                    </div>
+                </div>
+                <div class="product_container">
+                    <div class="product">
+                        <img src="./icons/perfume-template.png" alt="Produto" class="product_image">
+                        <div class="product_overlay">
+                            <div class="product_info">
+                                <div class="size_options">
+                                    <span>PP</span>
+                                    <span>P</span>
+                                    <span>M</span>
+                                    <span>G</span>
+                                    <span>GG</span>
+                                </div>
+                                <button class="buy_button">COMPRE AGORA</button>
+                            </div>
+                        </div>
+                        <div class="product_heart">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                                <path class="heart_path"
+                                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product_description">
+                        <p class="product_name">Jaqueta Lacoste</p>
+                        <span><b>R$ 236,15</b> <s>R$ 336,00</s> <small>3x R$ 99,90</small> <br> <b class="green">R$ 229,90</b> no PIX</b> </span>
+                        <br>
+                        <br>
+                        <p>+ 19 cores</p>
+                    </div>
+                </div>
+                <div class="product_container">
+                    <div class="product">
+                        <img src="./icons/perfume-template.png" alt="Produto" class="product_image">
+                        <div class="product_overlay">
+                            <div class="product_info">
+                                <div class="size_options">
+                                    <span>PP</span>
+                                    <span>P</span>
+                                    <span>M</span>
+                                    <span>G</span>
+                                    <span>GG</span>
+                                </div>
+                                <button class="buy_button">COMPRE AGORA</button>
+                            </div>
+                        </div>
+                        <div class="product_heart">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                                <path class="heart_path"
+                                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product_description">
+                        <p class="product_name">Jaqueta Lacoste</p>
+                        <span><b>R$ 236,15</b> <s>R$ 336,00</s> <small>3x R$ 99,90</small> <br> <b class="green">R$ 229,90</b> no PIX</b> </span>
+                        <br>
+                        <br>
+                        <p>+ 19 cores</p>
+                    </div>
+                </div>
+                <div class="product_container">
+                    <div class="product">
+                        <img src="./icons/perfume-template.png" alt="Produto" class="product_image">
+                        <div class="product_overlay">
+                            <div class="product_info">
+                                <div class="size_options">
+                                    <span>PP</span>
+                                    <span>P</span>
+                                    <span>M</span>
+                                    <span>G</span>
+                                    <span>GG</span>
+                                </div>
+                                <button class="buy_button">COMPRE AGORA</button>
+                            </div>
+                        </div>
+                        <div class="product_heart">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                                <path class="heart_path"
+                                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product_description">
+                        <p class="product_name">Jaqueta Lacoste</p>
+                        <span><b>R$ 236,15</b> <s>R$ 336,00</s> <small>3x R$ 99,90</small> <br> <b class="green">R$ 229,90</b> no PIX</b> </span>
+                        <br>
+                        <br>
+                        <p>+ 19 cores</p>
+                    </div>
+                </div>
+                <div class="product_container">
+                    <div class="product">
+                        <img src="./icons/perfume-template.png" alt="Produto" class="product_image">
+                        <div class="product_overlay">
+                            <div class="product_info">
+                                <div class="size_options">
+                                    <span>PP</span>
+                                    <span>P</span>
+                                    <span>M</span>
+                                    <span>G</span>
+                                    <span>GG</span>
+                                </div>
+                                <button class="buy_button">COMPRE AGORA</button>
+                            </div>
+                        </div>
+                        <div class="product_heart">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                                <path class="heart_path"
+                                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product_description">
+                        <p class="product_name">Jaqueta Lacoste</p>
+                        <span><b>R$ 236,15</b> <s>R$ 336,00</s> <small>3x R$ 99,90</small> <br> <b class="green">R$ 229,90</b> no PIX</b> </span>
+                        <br>
+                        <br>
+                        <p>+ 19 cores</p>
+                    </div>
+                </div>
+                <div class="product_container">
+                    <div class="product">
+                        <img src="./icons/perfume-template.png" alt="Produto" class="product_image">
+                        <div class="product_overlay">
+                            <div class="product_info">
+                                <div class="size_options">
+                                    <span>PP</span>
+                                    <span>P</span>
+                                    <span>M</span>
+                                    <span>G</span>
+                                    <span>GG</span>
+                                </div>
+                                <button class="buy_button">COMPRE AGORA</button>
+                            </div>
+                        </div>
+                        <div class="product_heart">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                                <path class="heart_path"
+                                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="product_description">
+                        <p class="product_name">Jaqueta Lacoste</p>
+                        <span><b>R$ 236,15</b> <s>R$ 336,00</s> <small>3x R$ 99,90</small> <br> <b class="green">R$ 229,90</b> no PIX</b> </span>
+                        <br>
+                        <br>
+                        <p>+ 19 cores</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="reviews">
+            <div class="container_review">
+                <h2>
+                    Quem usa, recomenda!<br>
+                    <span>Veja nossas avaliações</span>
+                </h2>
+                <div class="slider_container">
+                    <button class="prev_review">&#10094;</button>
+                    <div class="slider_reviews">
+                        <div class="slide_review">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <div class="review_user_info">
+                                <span><b>João da Silva</b></span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, <br>
+                                    consectetur adipiscing elit. Nullam nec dui <br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="slide_review">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <div class="review_user_info">
+                                <span><b>João da Silva</b></span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, <br>
+                                    consectetur adipiscing elit. Nullam nec dui <br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="slide_review">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <div class="review_user_info">
+                                <span><b>João da Silva</b></span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, <br>
+                                    consectetur adipiscing elit. Nullam nec dui <br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="slide_review">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <img src="./icons/star-full.svg" alt="Foto do usuário" class="review_user">
+                            <div class="review_user_info">
+                                <span><b>João da Silva</b></span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, <br>
+                                    consectetur adipiscing elit. Nullam nec dui <br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="next_review">&#10095;</button>
+                    <div class="slider_bars">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section>
             <div>
                 <a href="">
@@ -973,7 +1241,6 @@
                 </a>
             </div>
         </section>
-
     </main>
     <footer>
         <div class="about">
