Menu dropdown feito

--- a/index.html
+++ b/index.html
@@ -67,38 +67,259 @@
             </div>
             <div class="header_nav-wrapper">
                 <nav>
-                    <a href="">
-                        TODA A LOJA
-                        <div class="hamburger-menu">
-                            <div class="line"></div>
-                            <div class="line"></div>
-                            <div class="line"></div>
+                    <div class="dropdown">
+                        <a href="">
+                            TODA A LOJA
+                            <div class="hamburger-menu">
+                                <div class="line"></div>
+                                <div class="line"></div>
+                                <div class="line"></div>
+                            </div>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <img src="./icons/roupa-category.png" alt="">
+                                </div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="">
-                        ROUPAS
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <a href="">
-                        CALÇADOS
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <a href="">
-                        ACESSÓRIOS
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <a href="">
-                        PERFUMES
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <a href="">
-                        MARCAS
-                        <i class="fas fa-caret-down"></i>
-                    </a>
-                    <a href="">
-                        INFANTIL
-                        <i class="fas fa-caret-down"></i>
-                    </a>
+                    </div>
+                    <div class="dropdown">
+                        <a href="">
+                            ROUPAS
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="">
+                            CALÇADOS
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="">
+                            ACESSÓRIOS
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="">
+                            PERFUMES
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="">
+                            MARCAS
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <a href="">
+                            INFANTIL
+                            <i class="fas fa-caret-down"></i>
+                        </a>
+                        <div class="dropdown content">
+                            <div class="grid_container">
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                                <div>
+                                    <span>Roupas</span>
+                                    <span>Calçados</span>
+                                    <span>Acessórios</span>
+                                    <span>Perfumes</span>
+                                    <span>Marcas</span>
+                                    <span>Infantil</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </nav>
             </div>
         </div>
